# LOL_LCU-rs

./: .gitignore  Cargo.toml  GEMINI.md  REFACTOR_AGREEMENT.md  REFACTOR_PLAN.md  build.rs  win_bridge.py
.cargo/: config.toml
.github/workflows/: release.yml
src/: logging.rs  main.rs
src/app/: config.rs  dispatcher.rs  event.rs  handlers.rs  loot.rs  main_loop.rs  mod.rs  premade.rs  prophet.rs  scout.rs  sniper.rs  state.rs  tasks.rs  viewmodel.rs
src/app/handlers/: champ_select.rs  gameflow.rs  honor.rs  lobby.rs  loot.rs  mod.rs  overlay_click.rs  ready_check.rs  utils.rs
src/lcu/: api.rs  connection.rs  mod.rs  websocket.rs
src/lcu/api/: champ_select.rs  chat.rs  gameflow.rs  honor.rs  lobby.rs  loot.rs  match_history.rs  mod.rs  summoner.rs
src/win/: base.rs  hud1.rs  hud2.rs  info_panel.rs  mod.rs  overlay.rs  tray.rs  winapi.rs
